# matplotlibcpp17

./: .clang-format  .dir-locals.el  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  animation_8h_source.html  annotated.html  annotated_dup.js  axes_8h_source.html  classes.html  cm_8h_source.html  collections_8h_source.html  common_8h_source.html  container_8h_source.html  dir_9d778779ac4a56d793504606d77f1aab.html  dir_d44c64559bbebec7f509842c48db8b23.html  figure_8h_source.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  gridspec_8h_source.html  hello_world.cpp  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  legend_8h_source.html  matplotlibcpp17_8h_source.html  menudata.js  mplot3d_8h_source.html  namespacematplotlibcpp17.html  (+118 more)
.github/workflows/: main.yml
cmake/: package.cmake
doc/: Doxyfile  custom.css  footer.html  header.html
gallery/artist_animation/: CMakeLists.txt  animate_decay.cpp  cla_pause.cpp  random_walk.cpp
gallery/contrib/: sombrero,cpp  sombrero.cpp
gallery/images/: README.md
gallery/images_contours_and_fields/: CMakeLists.txt  contourf_log.cpp  image_demo.cpp  quiver_demo.cpp
gallery/lines_bars_and_markers/: CMakeLists.txt  bar_label_demo.cpp  errorbar_limits_simple.cpp  errorbar_subsample.cpp  fill.cpp  fill_between_demo.cpp  fill_betweenx_demo.cpp  scatter_hist.cpp  scatter_symbol.cpp  scatter_with_legend.cpp  simple_plot.cpp  step_demo.cpp
gallery/mplot3d/: CMakeLists.txt  contour3d.cpp  errorbar3d.cpp  lines3d.cpp  lorenz_attractor.cpp  subplot3d.cpp  surface3d.cpp
gallery/scales/: CMakeLists.txt  aspect_loglog.cpp
gallery/shapes_and_collections/: CMakeLists.txt  patch_collection.cpp  patches_circle_rectangle.cpp
gallery/statistics/: CMakeLists.txt  errorbar.cpp  hist.cpp
gallery/subplots_axes_and_figures/: CMakeLists.txt  align_labels_demo.cpp  colorbar_placement.cpp  gridspec_multicolumn.cpp  multiple_figs_demo.cpp  subplots.cpp  two_scales.cpp
gallery/tests/: CMakeLists.txt
gallery/tests/test_shared_lib/: CMakeLists.txt
gallery/tests/test_static_lib/: CMakeLists.txt  test_lib.cpp  test_lib_main.cpp
hello_world/: CMakeLists.txt  hello_world.cpp
include/matplotlib_cpp11/: axes.h  common.h  container.h  figure.h  gridspec.h  matplotlib_cpp11.h  pyplot.h  text.h
include/matplotlibcpp17/: animation.h  axes.h  cm.h  collections.h  common.h  container.h  figure.h  gridspec.h  legend.h  matplotlibcpp17.h  mplot3d.h  patches.h  pyplot.h  quiver.h  text.h  ticker.h  util.h
search/: all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  classes_0.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  namespaces_0.js  searchdata.js  variables_0.js
tests/: CMakeLists.txt  test_lib.cpp  test_lib_main.cpp
tests/test_shared_lib/: CMakeLists.txt  test_lib.cpp
tests/test_static_lib/: CMakeLists.txt  test_lib.cpp
